# server-service

./: Cargo.toml  Dockerfile  README.md  diesel.toml  puff.yml
migrations/2025-01-21-153006_table/: down.sql  up.sql
src/: main.rs  schema.rs
src/controller/: client.rs  mod.rs  monitoring.rs  server.rs
src/models/: client.rs  mod.rs  server.rs
src/repository/: client.rs  server.rs
src/service/: client.rs  mod.rs  monitoring.rs  server.rs
